compilador/compilador.output
Terminals unused in grammar

   LABEL
   TYPE
   ARRAY
   OF
   PROCEDURE
   FUNCTION


State 19 conflicts: 1 shift/reduce
State 33 conflicts: 1 shift/reduce
State 42 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 $@2: %empty

    4 bloco: $@2 parte_declara_vars comando_composto

    5 $@3: %empty

    6 parte_declara_vars: VAR $@3 declara_vars
    7                   | %empty

    8 declara_vars: declara_vars declara_var
    9             | declara_var

   10 $@4: %empty

   11 $@5: %empty

   12 declara_var: $@4 lista_id_var DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA

   13 tipo: BOOL
   14     | INT
   15     | CHAR
   16     | STR

   17 lista_id_var: lista_id_var VIRGULA IDENT
   18             | IDENT

   19 lista_idents: lista_idents VIRGULA IDENT
   20             | IDENT

   21 if: if_then cond_else

   22 $@6: %empty

   23 if_then: IF expr $@6 THEN comando_sem_rotulo

   24 $@7: %empty

   25 cond_else: ELSE $@7 comando_sem_rotulo
   26          | %empty

   27 $@8: %empty

   28 $@9: %empty

   29 while: WHILE $@8 expr $@9 DO comando_sem_rotulo

   30 comando_composto: T_BEGIN comandos T_END

   31 comandos: comandos PONTO_E_VIRGULA comando
   32         | comando

   33 comando: numero comando_sem_rotulo
   34        | comando_composto

   35 numero: NUMERO DOIS_PONTOS
   36       | %empty

   37 comando_goto: GOTO IDENT

   38 comando_sem_rotulo: atrib
   39                   | while
   40                   | if
   41                   | comando_goto
   42                   | comando_composto
   43                   | proc

   44 $@10: %empty

   45 atrib: var $@10 ATRIBUICAO exprs

   46 expr: exprs DIFF exprs
   47     | exprs IGUAL exprs
   48     | exprs MENOR exprs
   49     | exprs MAIOR exprs
   50     | exprs MENOR_IGUAL exprs
   51     | exprs MAIOR_IGUAL exprs
   52     | exprs

   53 exprs: exprs MAIS termo
   54      | exprs MENOS termo
   55      | exprs OR termo
   56      | termo

   57 termo: NOT fator
   58      | fator MULT fator
   59      | fator DIV fator
   60      | fator AND fator
   61      | fator

   62 fator: ABRE_PARENTESES expr FECHA_PARENTESES
   63      | var
   64      | proc
   65      | T_TRUE
   66      | T_FALSE
   67      | NUMERO

   68 read: READ ABRE_PARENTESES var FECHA_PARENTESES

   69 write: WRITE ABRE_PARENTESES expr FECHA_PARENTESES

   70 proc: read
   71     | write
   72     | %empty

   73 var: IDENT


Terminals, with rules where they appear

$end (0) 0
error (256)
PROGRAM (258) 2
ABRE_PARENTESES (259) 2 62 68 69
FECHA_PARENTESES (260) 2 62 68 69
VIRGULA (261) 17 19
PONTO_E_VIRGULA (262) 2 12 31
DOIS_PONTOS (263) 12 35
PONTO (264) 2
T_BEGIN (265) 30
T_END (266) 30
VAR (267) 6
IDENT (268) 2 17 18 19 20 37 73
ATRIBUICAO (269) 45
LABEL (270)
TYPE (271)
ARRAY (272)
OF (273)
PROCEDURE (274)
FUNCTION (275)
GOTO (276) 37
IF (277) 23
THEN (278) 23
ELSE (279) 25
WHILE (280) 29
DO (281) 29
OR (282) 55
AND (283) 60
NUMERO (284) 35 67
NOT (285) 57
DIV (286) 59
MULT (287) 58
MAIS (288) 53
MENOS (289) 54
T_TRUE (290) 65
T_FALSE (291) 66
MAIOR (292) 49
MENOR (293) 48
MAIOR_IGUAL (294) 51
MENOR_IGUAL (295) 50
DIFF (296) 46
INT (297) 14
STR (298) 16
CHAR (299) 15
BOOL (300) 13
IGUAL (301) 47
READ (302) 68
WRITE (303) 69


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
programa (50)
    on left: 2, on right: 0
$@1 (51)
    on left: 1, on right: 2
bloco (52)
    on left: 4, on right: 2
$@2 (53)
    on left: 3, on right: 4
parte_declara_vars (54)
    on left: 6 7, on right: 4
$@3 (55)
    on left: 5, on right: 6
declara_vars (56)
    on left: 8 9, on right: 6 8
declara_var (57)
    on left: 12, on right: 8 9
$@4 (58)
    on left: 10, on right: 12
$@5 (59)
    on left: 11, on right: 12
tipo (60)
    on left: 13 14 15 16, on right: 12
lista_id_var (61)
    on left: 17 18, on right: 12 17
lista_idents (62)
    on left: 19 20, on right: 2 19
if (63)
    on left: 21, on right: 40
if_then (64)
    on left: 23, on right: 21
$@6 (65)
    on left: 22, on right: 23
cond_else (66)
    on left: 25 26, on right: 21
$@7 (67)
    on left: 24, on right: 25
while (68)
    on left: 29, on right: 39
$@8 (69)
    on left: 27, on right: 29
$@9 (70)
    on left: 28, on right: 29
comando_composto (71)
    on left: 30, on right: 4 34 42
comandos (72)
    on left: 31 32, on right: 30 31
comando (73)
    on left: 33 34, on right: 31 32
numero (74)
    on left: 35 36, on right: 33
comando_goto (75)
    on left: 37, on right: 41
comando_sem_rotulo (76)
    on left: 38 39 40 41 42 43, on right: 23 25 29 33
atrib (77)
    on left: 45, on right: 38
$@10 (78)
    on left: 44, on right: 45
expr (79)
    on left: 46 47 48 49 50 51 52, on right: 23 29 62 69
exprs (80)
    on left: 53 54 55 56, on right: 45 46 47 48 49 50 51 52 53 54 55
termo (81)
    on left: 57 58 59 60 61, on right: 53 54 55 56
fator (82)
    on left: 62 63 64 65 66 67, on right: 57 58 59 60 61
read (83)
    on left: 68, on right: 70
write (84)
    on left: 69, on right: 71
proc (85)
    on left: 70 71 72, on right: 43 64
var (86)
    on left: 73, on right: 45 63 68


State 0

    0 $accept: . programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


State 2

    2 programa: $@1 . PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  shift, and go to state 4


State 3

    0 $accept: programa $end .

    $default  accept


State 4

    2 programa: $@1 PROGRAM . IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 5


State 5

    2 programa: $@1 PROGRAM IDENT . ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  shift, and go to state 6


State 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES . lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 7

    lista_idents  go to state 8


State 7

   20 lista_idents: IDENT .

    $default  reduce using rule 20 (lista_idents)


State 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents . FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   19 lista_idents: lista_idents . VIRGULA IDENT

    FECHA_PARENTESES  shift, and go to state 9
    VIRGULA           shift, and go to state 10


State 9

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES . PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  shift, and go to state 11


State 10

   19 lista_idents: lista_idents VIRGULA . IDENT

    IDENT  shift, and go to state 12


State 11

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA . bloco PONTO

    $default  reduce using rule 3 ($@2)

    bloco  go to state 13
    $@2    go to state 14


State 12

   19 lista_idents: lista_idents VIRGULA IDENT .

    $default  reduce using rule 19 (lista_idents)


State 13

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco . PONTO

    PONTO  shift, and go to state 15


State 14

    4 bloco: $@2 . parte_declara_vars comando_composto

    VAR  shift, and go to state 16

    $default  reduce using rule 7 (parte_declara_vars)

    parte_declara_vars  go to state 17


State 15

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO .

    $default  reduce using rule 2 (programa)


State 16

    6 parte_declara_vars: VAR . $@3 declara_vars

    $default  reduce using rule 5 ($@3)

    $@3  go to state 18


State 17

    4 bloco: $@2 parte_declara_vars . comando_composto

    T_BEGIN  shift, and go to state 19

    comando_composto  go to state 20


State 18

    6 parte_declara_vars: VAR $@3 . declara_vars

    $default  reduce using rule 10 ($@4)

    declara_vars  go to state 21
    declara_var   go to state 22
    $@4           go to state 23


State 19

   30 comando_composto: T_BEGIN . comandos T_END

    T_BEGIN  shift, and go to state 19
    NUMERO   shift, and go to state 24

    T_BEGIN   [reduce using rule 36 (numero)]
    $default  reduce using rule 36 (numero)

    comando_composto  go to state 25
    comandos          go to state 26
    comando           go to state 27
    numero            go to state 28


State 20

    4 bloco: $@2 parte_declara_vars comando_composto .

    $default  reduce using rule 4 (bloco)


State 21

    6 parte_declara_vars: VAR $@3 declara_vars .
    8 declara_vars: declara_vars . declara_var

    IDENT     reduce using rule 10 ($@4)
    $default  reduce using rule 6 (parte_declara_vars)

    declara_var  go to state 29
    $@4          go to state 23


State 22

    9 declara_vars: declara_var .

    $default  reduce using rule 9 (declara_vars)


State 23

   12 declara_var: $@4 . lista_id_var DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA

    IDENT  shift, and go to state 30

    lista_id_var  go to state 31


State 24

   35 numero: NUMERO . DOIS_PONTOS

    DOIS_PONTOS  shift, and go to state 32


State 25

   34 comando: comando_composto .

    $default  reduce using rule 34 (comando)


State 26

   30 comando_composto: T_BEGIN comandos . T_END
   31 comandos: comandos . PONTO_E_VIRGULA comando

    PONTO_E_VIRGULA  shift, and go to state 33
    T_END            shift, and go to state 34


State 27

   32 comandos: comando .

    $default  reduce using rule 32 (comandos)


State 28

   33 comando: numero . comando_sem_rotulo

    T_BEGIN  shift, and go to state 19
    IDENT    shift, and go to state 35
    GOTO     shift, and go to state 36
    IF       shift, and go to state 37
    WHILE    shift, and go to state 38
    READ     shift, and go to state 39
    WRITE    shift, and go to state 40

    $default  reduce using rule 72 (proc)

    if                  go to state 41
    if_then             go to state 42
    while               go to state 43
    comando_composto    go to state 44
    comando_goto        go to state 45
    comando_sem_rotulo  go to state 46
    atrib               go to state 47
    read                go to state 48
    write               go to state 49
    proc                go to state 50
    var                 go to state 51


State 29

    8 declara_vars: declara_vars declara_var .

    $default  reduce using rule 8 (declara_vars)


State 30

   18 lista_id_var: IDENT .

    $default  reduce using rule 18 (lista_id_var)


State 31

   12 declara_var: $@4 lista_id_var . DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA
   17 lista_id_var: lista_id_var . VIRGULA IDENT

    VIRGULA      shift, and go to state 52
    DOIS_PONTOS  shift, and go to state 53


State 32

   35 numero: NUMERO DOIS_PONTOS .

    $default  reduce using rule 35 (numero)


State 33

   31 comandos: comandos PONTO_E_VIRGULA . comando

    T_BEGIN  shift, and go to state 19
    NUMERO   shift, and go to state 24

    T_BEGIN   [reduce using rule 36 (numero)]
    $default  reduce using rule 36 (numero)

    comando_composto  go to state 25
    comando           go to state 54
    numero            go to state 28


State 34

   30 comando_composto: T_BEGIN comandos T_END .

    $default  reduce using rule 30 (comando_composto)


State 35

   73 var: IDENT .

    $default  reduce using rule 73 (var)


State 36

   37 comando_goto: GOTO . IDENT

    IDENT  shift, and go to state 55


State 37

   23 if_then: IF . expr $@6 THEN comando_sem_rotulo

    ABRE_PARENTESES  shift, and go to state 56
    IDENT            shift, and go to state 35
    NUMERO           shift, and go to state 57
    NOT              shift, and go to state 58
    T_TRUE           shift, and go to state 59
    T_FALSE          shift, and go to state 60
    READ             shift, and go to state 39
    WRITE            shift, and go to state 40

    $default  reduce using rule 72 (proc)

    expr   go to state 61
    exprs  go to state 62
    termo  go to state 63
    fator  go to state 64
    read   go to state 48
    write  go to state 49
    proc   go to state 65
    var    go to state 66


State 38

   29 while: WHILE . $@8 expr $@9 DO comando_sem_rotulo

    $default  reduce using rule 27 ($@8)

    $@8  go to state 67


State 39

   68 read: READ . ABRE_PARENTESES var FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 68


State 40

   69 write: WRITE . ABRE_PARENTESES expr FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 69


State 41

   40 comando_sem_rotulo: if .

    $default  reduce using rule 40 (comando_sem_rotulo)


State 42

   21 if: if_then . cond_else

    ELSE  shift, and go to state 70

    ELSE      [reduce using rule 26 (cond_else)]
    $default  reduce using rule 26 (cond_else)

    cond_else  go to state 71


State 43

   39 comando_sem_rotulo: while .

    $default  reduce using rule 39 (comando_sem_rotulo)


State 44

   42 comando_sem_rotulo: comando_composto .

    $default  reduce using rule 42 (comando_sem_rotulo)


State 45

   41 comando_sem_rotulo: comando_goto .

    $default  reduce using rule 41 (comando_sem_rotulo)


State 46

   33 comando: numero comando_sem_rotulo .

    $default  reduce using rule 33 (comando)


State 47

   38 comando_sem_rotulo: atrib .

    $default  reduce using rule 38 (comando_sem_rotulo)


State 48

   70 proc: read .

    $default  reduce using rule 70 (proc)


State 49

   71 proc: write .

    $default  reduce using rule 71 (proc)


State 50

   43 comando_sem_rotulo: proc .

    $default  reduce using rule 43 (comando_sem_rotulo)


State 51

   45 atrib: var . $@10 ATRIBUICAO exprs

    $default  reduce using rule 44 ($@10)

    $@10  go to state 72


State 52

   17 lista_id_var: lista_id_var VIRGULA . IDENT

    IDENT  shift, and go to state 73


State 53

   12 declara_var: $@4 lista_id_var DOIS_PONTOS . tipo $@5 PONTO_E_VIRGULA

    INT   shift, and go to state 74
    STR   shift, and go to state 75
    CHAR  shift, and go to state 76
    BOOL  shift, and go to state 77

    tipo  go to state 78


State 54

   31 comandos: comandos PONTO_E_VIRGULA comando .

    $default  reduce using rule 31 (comandos)


State 55

   37 comando_goto: GOTO IDENT .

    $default  reduce using rule 37 (comando_goto)


State 56

   62 fator: ABRE_PARENTESES . expr FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 56
    IDENT            shift, and go to state 35
    NUMERO           shift, and go to state 57
    NOT              shift, and go to state 58
    T_TRUE           shift, and go to state 59
    T_FALSE          shift, and go to state 60
    READ             shift, and go to state 39
    WRITE            shift, and go to state 40

    $default  reduce using rule 72 (proc)

    expr   go to state 79
    exprs  go to state 62
    termo  go to state 63
    fator  go to state 64
    read   go to state 48
    write  go to state 49
    proc   go to state 65
    var    go to state 66


State 57

   67 fator: NUMERO .

    $default  reduce using rule 67 (fator)


State 58

   57 termo: NOT . fator

    ABRE_PARENTESES  shift, and go to state 56
    IDENT            shift, and go to state 35
    NUMERO           shift, and go to state 57
    T_TRUE           shift, and go to state 59
    T_FALSE          shift, and go to state 60
    READ             shift, and go to state 39
    WRITE            shift, and go to state 40

    $default  reduce using rule 72 (proc)

    fator  go to state 80
    read   go to state 48
    write  go to state 49
    proc   go to state 65
    var    go to state 66


State 59

   65 fator: T_TRUE .

    $default  reduce using rule 65 (fator)


State 60

   66 fator: T_FALSE .

    $default  reduce using rule 66 (fator)


State 61

   23 if_then: IF expr . $@6 THEN comando_sem_rotulo

    $default  reduce using rule 22 ($@6)

    $@6  go to state 81


State 62

   46 expr: exprs . DIFF exprs
   47     | exprs . IGUAL exprs
   48     | exprs . MENOR exprs
   49     | exprs . MAIOR exprs
   50     | exprs . MENOR_IGUAL exprs
   51     | exprs . MAIOR_IGUAL exprs
   52     | exprs .
   53 exprs: exprs . MAIS termo
   54      | exprs . MENOS termo
   55      | exprs . OR termo

    OR           shift, and go to state 82
    MAIS         shift, and go to state 83
    MENOS        shift, and go to state 84
    MAIOR        shift, and go to state 85
    MENOR        shift, and go to state 86
    MAIOR_IGUAL  shift, and go to state 87
    MENOR_IGUAL  shift, and go to state 88
    DIFF         shift, and go to state 89
    IGUAL        shift, and go to state 90

    $default  reduce using rule 52 (expr)


State 63

   56 exprs: termo .

    $default  reduce using rule 56 (exprs)


State 64

   58 termo: fator . MULT fator
   59      | fator . DIV fator
   60      | fator . AND fator
   61      | fator .

    AND   shift, and go to state 91
    DIV   shift, and go to state 92
    MULT  shift, and go to state 93

    $default  reduce using rule 61 (termo)


State 65

   64 fator: proc .

    $default  reduce using rule 64 (fator)


State 66

   63 fator: var .

    $default  reduce using rule 63 (fator)


State 67

   29 while: WHILE $@8 . expr $@9 DO comando_sem_rotulo

    ABRE_PARENTESES  shift, and go to state 56
    IDENT            shift, and go to state 35
    NUMERO           shift, and go to state 57
    NOT              shift, and go to state 58
    T_TRUE           shift, and go to state 59
    T_FALSE          shift, and go to state 60
    READ             shift, and go to state 39
    WRITE            shift, and go to state 40

    $default  reduce using rule 72 (proc)

    expr   go to state 94
    exprs  go to state 62
    termo  go to state 63
    fator  go to state 64
    read   go to state 48
    write  go to state 49
    proc   go to state 65
    var    go to state 66


State 68

   68 read: READ ABRE_PARENTESES . var FECHA_PARENTESES

    IDENT  shift, and go to state 35

    var  go to state 95


State 69

   69 write: WRITE ABRE_PARENTESES . expr FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 56
    IDENT            shift, and go to state 35
    NUMERO           shift, and go to state 57
    NOT              shift, and go to state 58
    T_TRUE           shift, and go to state 59
    T_FALSE          shift, and go to state 60
    READ             shift, and go to state 39
    WRITE            shift, and go to state 40

    $default  reduce using rule 72 (proc)

    expr   go to state 96
    exprs  go to state 62
    termo  go to state 63
    fator  go to state 64
    read   go to state 48
    write  go to state 49
    proc   go to state 65
    var    go to state 66


State 70

   25 cond_else: ELSE . $@7 comando_sem_rotulo

    $default  reduce using rule 24 ($@7)

    $@7  go to state 97


State 71

   21 if: if_then cond_else .

    $default  reduce using rule 21 (if)


State 72

   45 atrib: var $@10 . ATRIBUICAO exprs

    ATRIBUICAO  shift, and go to state 98


State 73

   17 lista_id_var: lista_id_var VIRGULA IDENT .

    $default  reduce using rule 17 (lista_id_var)


State 74

   14 tipo: INT .

    $default  reduce using rule 14 (tipo)


State 75

   16 tipo: STR .

    $default  reduce using rule 16 (tipo)


State 76

   15 tipo: CHAR .

    $default  reduce using rule 15 (tipo)


State 77

   13 tipo: BOOL .

    $default  reduce using rule 13 (tipo)


State 78

   12 declara_var: $@4 lista_id_var DOIS_PONTOS tipo . $@5 PONTO_E_VIRGULA

    $default  reduce using rule 11 ($@5)

    $@5  go to state 99


State 79

   62 fator: ABRE_PARENTESES expr . FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 100


State 80

   57 termo: NOT fator .

    $default  reduce using rule 57 (termo)


State 81

   23 if_then: IF expr $@6 . THEN comando_sem_rotulo

    THEN  shift, and go to state 101


State 82

   55 exprs: exprs OR . termo

    ABRE_PARENTESES  shift, and go to state 56
    IDENT            shift, and go to state 35
    NUMERO           shift, and go to state 57
    NOT              shift, and go to state 58
    T_TRUE           shift, and go to state 59
    T_FALSE          shift, and go to state 60
    READ             shift, and go to state 39
    WRITE            shift, and go to state 40

    $default  reduce using rule 72 (proc)

    termo  go to state 102
    fator  go to state 64
    read   go to state 48
    write  go to state 49
    proc   go to state 65
    var    go to state 66


State 83

   53 exprs: exprs MAIS . termo

    ABRE_PARENTESES  shift, and go to state 56
    IDENT            shift, and go to state 35
    NUMERO           shift, and go to state 57
    NOT              shift, and go to state 58
    T_TRUE           shift, and go to state 59
    T_FALSE          shift, and go to state 60
    READ             shift, and go to state 39
    WRITE            shift, and go to state 40

    $default  reduce using rule 72 (proc)

    termo  go to state 103
    fator  go to state 64
    read   go to state 48
    write  go to state 49
    proc   go to state 65
    var    go to state 66


State 84

   54 exprs: exprs MENOS . termo

    ABRE_PARENTESES  shift, and go to state 56
    IDENT            shift, and go to state 35
    NUMERO           shift, and go to state 57
    NOT              shift, and go to state 58
    T_TRUE           shift, and go to state 59
    T_FALSE          shift, and go to state 60
    READ             shift, and go to state 39
    WRITE            shift, and go to state 40

    $default  reduce using rule 72 (proc)

    termo  go to state 104
    fator  go to state 64
    read   go to state 48
    write  go to state 49
    proc   go to state 65
    var    go to state 66


State 85

   49 expr: exprs MAIOR . exprs

    ABRE_PARENTESES  shift, and go to state 56
    IDENT            shift, and go to state 35
    NUMERO           shift, and go to state 57
    NOT              shift, and go to state 58
    T_TRUE           shift, and go to state 59
    T_FALSE          shift, and go to state 60
    READ             shift, and go to state 39
    WRITE            shift, and go to state 40

    $default  reduce using rule 72 (proc)

    exprs  go to state 105
    termo  go to state 63
    fator  go to state 64
    read   go to state 48
    write  go to state 49
    proc   go to state 65
    var    go to state 66


State 86

   48 expr: exprs MENOR . exprs

    ABRE_PARENTESES  shift, and go to state 56
    IDENT            shift, and go to state 35
    NUMERO           shift, and go to state 57
    NOT              shift, and go to state 58
    T_TRUE           shift, and go to state 59
    T_FALSE          shift, and go to state 60
    READ             shift, and go to state 39
    WRITE            shift, and go to state 40

    $default  reduce using rule 72 (proc)

    exprs  go to state 106
    termo  go to state 63
    fator  go to state 64
    read   go to state 48
    write  go to state 49
    proc   go to state 65
    var    go to state 66


State 87

   51 expr: exprs MAIOR_IGUAL . exprs

    ABRE_PARENTESES  shift, and go to state 56
    IDENT            shift, and go to state 35
    NUMERO           shift, and go to state 57
    NOT              shift, and go to state 58
    T_TRUE           shift, and go to state 59
    T_FALSE          shift, and go to state 60
    READ             shift, and go to state 39
    WRITE            shift, and go to state 40

    $default  reduce using rule 72 (proc)

    exprs  go to state 107
    termo  go to state 63
    fator  go to state 64
    read   go to state 48
    write  go to state 49
    proc   go to state 65
    var    go to state 66


State 88

   50 expr: exprs MENOR_IGUAL . exprs

    ABRE_PARENTESES  shift, and go to state 56
    IDENT            shift, and go to state 35
    NUMERO           shift, and go to state 57
    NOT              shift, and go to state 58
    T_TRUE           shift, and go to state 59
    T_FALSE          shift, and go to state 60
    READ             shift, and go to state 39
    WRITE            shift, and go to state 40

    $default  reduce using rule 72 (proc)

    exprs  go to state 108
    termo  go to state 63
    fator  go to state 64
    read   go to state 48
    write  go to state 49
    proc   go to state 65
    var    go to state 66


State 89

   46 expr: exprs DIFF . exprs

    ABRE_PARENTESES  shift, and go to state 56
    IDENT            shift, and go to state 35
    NUMERO           shift, and go to state 57
    NOT              shift, and go to state 58
    T_TRUE           shift, and go to state 59
    T_FALSE          shift, and go to state 60
    READ             shift, and go to state 39
    WRITE            shift, and go to state 40

    $default  reduce using rule 72 (proc)

    exprs  go to state 109
    termo  go to state 63
    fator  go to state 64
    read   go to state 48
    write  go to state 49
    proc   go to state 65
    var    go to state 66


State 90

   47 expr: exprs IGUAL . exprs

    ABRE_PARENTESES  shift, and go to state 56
    IDENT            shift, and go to state 35
    NUMERO           shift, and go to state 57
    NOT              shift, and go to state 58
    T_TRUE           shift, and go to state 59
    T_FALSE          shift, and go to state 60
    READ             shift, and go to state 39
    WRITE            shift, and go to state 40

    $default  reduce using rule 72 (proc)

    exprs  go to state 110
    termo  go to state 63
    fator  go to state 64
    read   go to state 48
    write  go to state 49
    proc   go to state 65
    var    go to state 66


State 91

   60 termo: fator AND . fator

    ABRE_PARENTESES  shift, and go to state 56
    IDENT            shift, and go to state 35
    NUMERO           shift, and go to state 57
    T_TRUE           shift, and go to state 59
    T_FALSE          shift, and go to state 60
    READ             shift, and go to state 39
    WRITE            shift, and go to state 40

    $default  reduce using rule 72 (proc)

    fator  go to state 111
    read   go to state 48
    write  go to state 49
    proc   go to state 65
    var    go to state 66


State 92

   59 termo: fator DIV . fator

    ABRE_PARENTESES  shift, and go to state 56
    IDENT            shift, and go to state 35
    NUMERO           shift, and go to state 57
    T_TRUE           shift, and go to state 59
    T_FALSE          shift, and go to state 60
    READ             shift, and go to state 39
    WRITE            shift, and go to state 40

    $default  reduce using rule 72 (proc)

    fator  go to state 112
    read   go to state 48
    write  go to state 49
    proc   go to state 65
    var    go to state 66


State 93

   58 termo: fator MULT . fator

    ABRE_PARENTESES  shift, and go to state 56
    IDENT            shift, and go to state 35
    NUMERO           shift, and go to state 57
    T_TRUE           shift, and go to state 59
    T_FALSE          shift, and go to state 60
    READ             shift, and go to state 39
    WRITE            shift, and go to state 40

    $default  reduce using rule 72 (proc)

    fator  go to state 113
    read   go to state 48
    write  go to state 49
    proc   go to state 65
    var    go to state 66


State 94

   29 while: WHILE $@8 expr . $@9 DO comando_sem_rotulo

    $default  reduce using rule 28 ($@9)

    $@9  go to state 114


State 95

   68 read: READ ABRE_PARENTESES var . FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 115


State 96

   69 write: WRITE ABRE_PARENTESES expr . FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 116


State 97

   25 cond_else: ELSE $@7 . comando_sem_rotulo

    T_BEGIN  shift, and go to state 19
    IDENT    shift, and go to state 35
    GOTO     shift, and go to state 36
    IF       shift, and go to state 37
    WHILE    shift, and go to state 38
    READ     shift, and go to state 39
    WRITE    shift, and go to state 40

    $default  reduce using rule 72 (proc)

    if                  go to state 41
    if_then             go to state 42
    while               go to state 43
    comando_composto    go to state 44
    comando_goto        go to state 45
    comando_sem_rotulo  go to state 117
    atrib               go to state 47
    read                go to state 48
    write               go to state 49
    proc                go to state 50
    var                 go to state 51


State 98

   45 atrib: var $@10 ATRIBUICAO . exprs

    ABRE_PARENTESES  shift, and go to state 56
    IDENT            shift, and go to state 35
    NUMERO           shift, and go to state 57
    NOT              shift, and go to state 58
    T_TRUE           shift, and go to state 59
    T_FALSE          shift, and go to state 60
    READ             shift, and go to state 39
    WRITE            shift, and go to state 40

    $default  reduce using rule 72 (proc)

    exprs  go to state 118
    termo  go to state 63
    fator  go to state 64
    read   go to state 48
    write  go to state 49
    proc   go to state 65
    var    go to state 66


State 99

   12 declara_var: $@4 lista_id_var DOIS_PONTOS tipo $@5 . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 119


State 100

   62 fator: ABRE_PARENTESES expr FECHA_PARENTESES .

    $default  reduce using rule 62 (fator)


State 101

   23 if_then: IF expr $@6 THEN . comando_sem_rotulo

    T_BEGIN  shift, and go to state 19
    IDENT    shift, and go to state 35
    GOTO     shift, and go to state 36
    IF       shift, and go to state 37
    WHILE    shift, and go to state 38
    READ     shift, and go to state 39
    WRITE    shift, and go to state 40

    $default  reduce using rule 72 (proc)

    if                  go to state 41
    if_then             go to state 42
    while               go to state 43
    comando_composto    go to state 44
    comando_goto        go to state 45
    comando_sem_rotulo  go to state 120
    atrib               go to state 47
    read                go to state 48
    write               go to state 49
    proc                go to state 50
    var                 go to state 51


State 102

   55 exprs: exprs OR termo .

    $default  reduce using rule 55 (exprs)


State 103

   53 exprs: exprs MAIS termo .

    $default  reduce using rule 53 (exprs)


State 104

   54 exprs: exprs MENOS termo .

    $default  reduce using rule 54 (exprs)


State 105

   49 expr: exprs MAIOR exprs .
   53 exprs: exprs . MAIS termo
   54      | exprs . MENOS termo
   55      | exprs . OR termo

    OR     shift, and go to state 82
    MAIS   shift, and go to state 83
    MENOS  shift, and go to state 84

    $default  reduce using rule 49 (expr)


State 106

   48 expr: exprs MENOR exprs .
   53 exprs: exprs . MAIS termo
   54      | exprs . MENOS termo
   55      | exprs . OR termo

    OR     shift, and go to state 82
    MAIS   shift, and go to state 83
    MENOS  shift, and go to state 84

    $default  reduce using rule 48 (expr)


State 107

   51 expr: exprs MAIOR_IGUAL exprs .
   53 exprs: exprs . MAIS termo
   54      | exprs . MENOS termo
   55      | exprs . OR termo

    OR     shift, and go to state 82
    MAIS   shift, and go to state 83
    MENOS  shift, and go to state 84

    $default  reduce using rule 51 (expr)


State 108

   50 expr: exprs MENOR_IGUAL exprs .
   53 exprs: exprs . MAIS termo
   54      | exprs . MENOS termo
   55      | exprs . OR termo

    OR     shift, and go to state 82
    MAIS   shift, and go to state 83
    MENOS  shift, and go to state 84

    $default  reduce using rule 50 (expr)


State 109

   46 expr: exprs DIFF exprs .
   53 exprs: exprs . MAIS termo
   54      | exprs . MENOS termo
   55      | exprs . OR termo

    OR     shift, and go to state 82
    MAIS   shift, and go to state 83
    MENOS  shift, and go to state 84

    $default  reduce using rule 46 (expr)


State 110

   47 expr: exprs IGUAL exprs .
   53 exprs: exprs . MAIS termo
   54      | exprs . MENOS termo
   55      | exprs . OR termo

    OR     shift, and go to state 82
    MAIS   shift, and go to state 83
    MENOS  shift, and go to state 84

    $default  reduce using rule 47 (expr)


State 111

   60 termo: fator AND fator .

    $default  reduce using rule 60 (termo)


State 112

   59 termo: fator DIV fator .

    $default  reduce using rule 59 (termo)


State 113

   58 termo: fator MULT fator .

    $default  reduce using rule 58 (termo)


State 114

   29 while: WHILE $@8 expr $@9 . DO comando_sem_rotulo

    DO  shift, and go to state 121


State 115

   68 read: READ ABRE_PARENTESES var FECHA_PARENTESES .

    $default  reduce using rule 68 (read)


State 116

   69 write: WRITE ABRE_PARENTESES expr FECHA_PARENTESES .

    $default  reduce using rule 69 (write)


State 117

   25 cond_else: ELSE $@7 comando_sem_rotulo .

    $default  reduce using rule 25 (cond_else)


State 118

   45 atrib: var $@10 ATRIBUICAO exprs .
   53 exprs: exprs . MAIS termo
   54      | exprs . MENOS termo
   55      | exprs . OR termo

    OR     shift, and go to state 82
    MAIS   shift, and go to state 83
    MENOS  shift, and go to state 84

    $default  reduce using rule 45 (atrib)


State 119

   12 declara_var: $@4 lista_id_var DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA .

    $default  reduce using rule 12 (declara_var)


State 120

   23 if_then: IF expr $@6 THEN comando_sem_rotulo .

    $default  reduce using rule 23 (if_then)

